[gd_scene load_steps=15 format=3 uid="uid://3mcgdp8sij0t"]

[ext_resource type="Script" path="res://scripts/playerStuff/betterCharacterMovement.gd" id="1_etma0"]
[ext_resource type="Script" path="res://scripts/healthHandler.gd" id="2_4dlv8"]
[ext_resource type="Script" path="res://scripts/playerStuff/toolShell.gd" id="3_u2eap"]
[ext_resource type="Script" path="res://scripts/playerStuff/inventoryHandler.gd" id="4_ptu0e"]
[ext_resource type="PackedScene" uid="uid://byxg4e0k0cuym" path="res://prefabs/item_shell.tscn" id="5_sxtkr"]
[ext_resource type="Shader" path="res://materials/shaders/crosshairInverted.gdshader" id="6_xenc2"]
[ext_resource type="Texture2D" uid="uid://d2uj83xgcpmu4" path="res://sprites/Circle.png" id="7_vav8e"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_ebwuh"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_e7rta"]

[sub_resource type="BoxMesh" id="BoxMesh_385ov"]

[sub_resource type="SphereShape3D" id="SphereShape3D_d3746"]
radius = 0.351076

[sub_resource type="ShaderMaterial" id="ShaderMaterial_c5fyc"]
shader = ExtResource("6_xenc2")

[sub_resource type="LabelSettings" id="LabelSettings_v0apu"]
font_size = 20

[sub_resource type="LabelSettings" id="LabelSettings_1tyr3"]
font_size = 12

[node name="BetterCharacter" type="CharacterBody3D" node_paths=PackedStringArray("label", "character_rot_helper") groups=["Player"]]
axis_lock_angular_x = true
axis_lock_angular_y = true
axis_lock_angular_z = true
platform_on_leave = 2
platform_floor_layers = 4294967292
script = ExtResource("1_etma0")
label = NodePath("Label")
character_rot_helper = NodePath("Rotation Helper")

[node name="MainCollider" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.02571, 0)
shape = SubResource("CapsuleShape3D_ebwuh")
script = ExtResource("2_4dlv8")
maxHealth = 100

[node name="Rotation Helper" type="Node3D" parent="."]

[node name="BodyMesh" type="MeshInstance3D" parent="Rotation Helper"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.02571, 0)
mesh = SubResource("CapsuleMesh_e7rta")
skeleton = NodePath("../../MainCollider")

[node name="EyeMesh" type="MeshInstance3D" parent="Rotation Helper/BodyMesh"]
transform = Transform3D(0.801884, 0, 0, 0, 0.198757, 0, 0, 0, 0.534432, 0, 0.49705, -0.286436)
mesh = SubResource("BoxMesh_385ov")
skeleton = NodePath("../../Camera3D")

[node name="Camera3D" type="Camera3D" parent="Rotation Helper"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.52276, 0)
current = true
near = 0.3

[node name="SpotLight3D" type="SpotLight3D" parent="Rotation Helper/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.00278914, 0)
spot_range = 20.0

[node name="ToolShell" type="Node3D" parent="Rotation Helper/Camera3D" node_paths=PackedStringArray("firePoint")]
script = ExtResource("3_u2eap")
firePoint = NodePath("MeshInstance3D/FirePoint")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Rotation Helper/Camera3D/ToolShell"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.489744, -0.431009, -1.04913)
skeleton = NodePath("")

[node name="FirePoint" type="Node3D" parent="Rotation Helper/Camera3D/ToolShell/MeshInstance3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.55)

[node name="Feet" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Feet"]
shape = SubResource("SphereShape3D_d3746")

[node name="InventoryHandler" type="Node3D" parent="." node_paths=PackedStringArray("toolShell", "itemList", "selectedItemNameBox", "selectedItemDescBox", "weaponSet1Box", "weaponSet2Box", "dropButton")]
script = ExtResource("4_ptu0e")
toolShell = NodePath("../Rotation Helper/Camera3D/ToolShell")
worldItemPrefab = ExtResource("5_sxtkr")
itemList = NodePath("../InventoryPanel/ItemList")
selectedItemNameBox = NodePath("../InventoryPanel/SelectedItemName")
selectedItemDescBox = NodePath("../InventoryPanel/SelectedItemDesc")
weaponSet1Box = NodePath("../InventoryPanel/WeaponSetData/WeaponSet1Value")
weaponSet2Box = NodePath("../InventoryPanel/WeaponSetData/WeaponSet2Value")
dropButton = NodePath("../InventoryPanel/DropButton")

[node name="Label" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0
text = "Speed: "

[node name="Crosshair" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_c5fyc")
custom_minimum_size = Vector2(5, 5)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -2.5
offset_top = -2.5
offset_right = 2.5
offset_bottom = 2.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_vav8e")
expand_mode = 2

[node name="InventoryPanel" type="Panel" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -433.5
offset_top = -256.0
offset_right = 433.5
offset_bottom = 256.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="InventoryPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -80.0
offset_top = 5.0
offset_right = 80.0
offset_bottom = 33.0
grow_horizontal = 2
text = "Inventory"
label_settings = SubResource("LabelSettings_v0apu")
horizontal_alignment = 1

[node name="ItemList" type="ItemList" parent="InventoryPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -108.5
offset_top = -219.0
offset_right = 411.5
offset_bottom = 235.0
grow_horizontal = 2
grow_vertical = 2
allow_reselect = true

[node name="Title_SelectedItemName" type="Label" parent="InventoryPanel"]
layout_mode = 0
offset_left = 32.0
offset_top = 52.0
offset_right = 93.0
offset_bottom = 79.0
text = "Name: "
autowrap_mode = 3

[node name="SelectedItemName" type="Label" parent="InventoryPanel"]
layout_mode = 0
offset_left = 123.0
offset_top = 56.0
offset_right = 302.0
offset_bottom = 94.0
text = "Name of item"
label_settings = SubResource("LabelSettings_1tyr3")
autowrap_mode = 3

[node name="Title_SelectedItemDesc" type="Label" parent="InventoryPanel"]
layout_mode = 0
offset_left = 30.0
offset_top = 99.0
offset_right = 121.0
offset_bottom = 137.0
text = "Desciption: "
autowrap_mode = 3

[node name="SelectedItemDesc" type="Label" parent="InventoryPanel"]
layout_mode = 0
offset_left = 124.0
offset_top = 104.0
offset_right = 298.0
offset_bottom = 235.0
text = "Description of item"
label_settings = SubResource("LabelSettings_1tyr3")
autowrap_mode = 3

[node name="WeaponSetData" type="Control" parent="InventoryPanel"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="WeaponSet1Label" type="Label" parent="InventoryPanel/WeaponSetData"]
layout_mode = 0
offset_left = 35.0
offset_top = 344.0
offset_right = 151.0
offset_bottom = 367.0
text = "Weapon Set 1: "
autowrap_mode = 3

[node name="WeaponSet1Value" type="Label" parent="InventoryPanel/WeaponSetData"]
layout_mode = 0
offset_left = 162.0
offset_top = 345.0
offset_right = 317.0
offset_bottom = 367.0
text = "WeaponName1
"
label_settings = SubResource("LabelSettings_1tyr3")
vertical_alignment = 1
autowrap_mode = 3

[node name="WeaponSet2Label" type="Label" parent="InventoryPanel/WeaponSetData"]
layout_mode = 0
offset_left = 35.0
offset_top = 415.0
offset_right = 151.0
offset_bottom = 438.0
text = "Weapon Set 2: "
autowrap_mode = 3

[node name="WeaponSet2Value" type="Label" parent="InventoryPanel/WeaponSetData"]
layout_mode = 0
offset_left = 162.0
offset_top = 415.0
offset_right = 317.0
offset_bottom = 437.0
text = "WeaponName2"
label_settings = SubResource("LabelSettings_1tyr3")
vertical_alignment = 1
autowrap_mode = 3

[node name="DropButton" type="Button" parent="InventoryPanel"]
layout_mode = 0
offset_left = 87.0
offset_top = 255.0
offset_right = 238.0
offset_bottom = 283.0
disabled = true
text = "Drop Selected Item"

[connection signal="empty_clicked" from="InventoryPanel/ItemList" to="InventoryHandler" method="onInventoryItemDeselectAll"]
[connection signal="item_selected" from="InventoryPanel/ItemList" to="InventoryHandler" method="onInventoryItemSelect"]
[connection signal="pressed" from="InventoryPanel/DropButton" to="InventoryHandler" method="_on_drop_button_pressed"]
